# ClosedGL

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
shaders/: basic.frag  basic.vert  frag.glsl  frag.slang  shadow.vert  vert.glsl  vert.slang
source/: camera.cpp  engine.cpp  gltf.cpp  input.cpp  main.cpp  mesh.cpp  tools.cpp  user_interface.cpp
source/include/: camera.hpp  closed_gl.hpp  engine.hpp  gltf.hpp  input.hpp  mesh.hpp  shader.hpp  tools.hpp  user_interface.hpp
